--- a/src/app/shared/components/main-sidebar/main-sidebar.component.html
+++ b/src/app/shared/components/main-sidebar/main-sidebar.component.html
@@ -1,9 +1,9 @@
-<div style="text-align: center;" class="mt-3">
+<div style="text-align: center;" class="mt-1">
     <a class="layout-topbar-logo" routerLink="">
-        <img style="width: 140px;" src="../../../../assets/img/logo_cap.svg" alt="logo">
+        <img style="width: 119px;" src="../../../../assets/img/logo_cap.svg" alt="logo">
     </a>
 </div>
 
-<hr  class="mb-3 mx-3 border-top-1 border-none surface-border">
+<hr  class="mb-3 border-top-1 border-none border-wi">
 
 <app-main-menu></app-main-menu>
