--- a/src/app/shared/components/main-topbar/main-topbar.component.html
+++ b/src/app/shared/components/main-topbar/main-topbar.component.html
@@ -1,33 +1,67 @@
-<div class="layout-topbar layout-theme-light">
+<div class="layout-topbar layout-theme-light border-bottom-1 surface-border">
     
 
-    <button #menubutton class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
+    <button #menubutton class="p-link layout-menu-button layout-topbar-button shadow-none" (click)="layoutService.onMenuToggle()">
         <i class="pi pi-bars"></i>
     </button>
+
 
     <button #topbarmenubutton class="p-link layout-topbar-menu-button layout-topbar-button" >
         <i class="pi pi-ellipsis-v"></i>
     </button>
 
     <div #topbarmenu class="layout-topbar-menu" >
+       
+
         
-        <button class="p-link layout-topbar-button name-top" >
+        <button class="p-link layout-topbar-button name-top" (click)="accountMenu.toggle($event)">
+            <p-avatar
+            label="M"
+            styleClass="mr-2 cursor-pointer layout-topbar-button"
+            [style]="{ 'background-color': '#9c27b0', color: '#ffffff', width: '2.5rem',height: '2.5rem' }"
+            shape="circle"
+          ></p-avatar>
+
             <span>ALIN ASNET RODRIGUEZ</span>
-            <i class="pi pi-user"></i>
-        </button>
-        <button class="p-link layout-topbar-button" pTooltip="Cerrar sesión" >
-            <i class="pi pi-sign-out"></i>
-            <span>Settings</span>
+            <i class="pi pi-chevron-down fz-1"></i>
         </button>
 
-        <!-- <p-menu #menuOption 
-                [popup]="true" 
-                [model]="onGetMenuMenu()" 
-                [autoZIndex]="true"
-                appendTo="body"
-                onshow=""
-                styleClass="width-menu">
-         </p-menu> -->
+        <p-overlayPanel  #accountMenu [style]="{ width: '350px' }" styleClass="shadow-6">
+            <ng-template pTemplate>
+                <div class="grid text-center">
+                    <div class="col-12">
+                        <p-avatar
+                            label="M"
+                            styleClass="mr-2 cursor-pointer layout-topbar-button"
+                            [style]="{ 'background-color': '#9c27b0', color: '#ffffff', width: '3rem',height: '3rem' }"
+                            shape="circle"
+                        ></p-avatar>
+                      </div>
+                      <div class="col-12">
+                        <h5 class="text-lg text-900">ALIN ASNET RODRIGUEZ</h5>
+                        <p class="text-500">alin@senprende.hn</p>
+                      </div>
+                      <div class="col-12">
+                        <p-menu [model]="accountMenuItems" styleClass="w-full"></p-menu>
+                      </div>
+                      <div class="col-12">
+                        <p-divider></p-divider>
+                      </div>
+                      <div class="col-12">
+                        <p-button
+                          label="Salir"
+                          icon="pi pi-sign-out"
+                          iconPos="right"
+                          styleClass="w-full p-button-text border-1 surface-border text-800"
+                        ></p-button>
+                      </div>
+                </div>
+            </ng-template>
+        </p-overlayPanel>
+        
+
+
+       
 
 
     </div>
